--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [common]
-api_key = KEES1EG47DPZONY9
+api_key = OF8KPWK2UXIU3I3X
 companies =
     Reliance Industries Limited,RELIANCE.BSE
     Tata Consultancy Services Limited,TCS.BSE
@@ -7,9 +7,9 @@ companies =
     Infosys Limited,INFY.BSE
     ICICI Bank Limited,ICICIBANK.BSE
     Hindustan Unilever Limited,HINDUNILVR.BSE
-    State Bank of India,SBI.BSE
+    State Bank of India,SBIN.BSE
     Bharti Airtel Limited,BHARTIARTL.BSE
-    Life Insurance Corporation of India Limited,LIC.BSE
+    Life Insurance Corporation of India Limited,LICI.BSE
     ITC Limited,ITC.BSE
 
 [historical]
